# tech-hands-on

./: README.md  airflow.md  todo.md
agentic-ai/: ai.py
agentic-ai/client/: open_api_client.ipynb
airflow/: airflow.txt  mwaa.txt
rag/: .gitignore  README.md  pyproject.toml  rag.txt
rag/data-ingestion/: data-ingestion.ipynb
rag/data-ingestion/data/story/: plot.txt
rag/data-ingestion/data/text_files/: machine_learning.txt
redis/: redis.md  redis.txt
